[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/character/player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/character/player/PinkMan.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/jump4.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/hurt1.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/character/player/PlayerFSM.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.90412, 12.2033 )

[sub_resource type="Animation" id=2]
resource_name = "climb"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "doublejump"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29 ]
}

[sub_resource type="Animation" id=4]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 31 ]
}

[sub_resource type="Animation" id=5]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 41, 42, 43, 44, 45, 46, 47 ]
}

[sub_resource type="Animation" id=6]
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22 ]
}

[sub_resource type="Animation" id=7]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 30 ]
}

[sub_resource type="Animation" id=8]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=9]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 40 ]
}

[sub_resource type="Gradient" id=10]
colors = PoolColorArray( 1, 0.88739, 0.648438, 1, 0.992188, 0.902107, 0.66275, 0.0828627 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 2
emission_box_extents = Vector3( 1, 6, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 1.0
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
scale_random = 1.0
color_ramp = SubResource( 11 )

[sub_resource type="Animation" id=13]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=14]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.8, 0.8 )
collision_layer = 2
collision_mask = 13
script = ExtResource( 1 )

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 4
hframes = 12
frame = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.717 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/climb = SubResource( 2 )
anims/doublejump = SubResource( 3 )
anims/fall = SubResource( 4 )
anims/hurt = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/jump = SubResource( 7 )
anims/run = SubResource( 8 )
anims/wall_slide = SubResource( 9 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true
zoom = Vector2( 0.4, 0.4 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.1
drag_margin_right = 0.1

[node name="Dust" type="Particles2D" parent="."]
visible = false
position = Vector2( -2, 15 )
rotation = -1.5708
emitting = false
amount = 20
lifetime = 0.45
one_shot = true
speed_scale = 2.0
explosiveness = 0.7
local_coords = false
process_material = SubResource( 12 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="JusttakedamageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="EffectAnimation" type="AnimationPlayer" parent="."]
anims/flash = SubResource( 13 )
anims/rest = SubResource( 14 )

[node name="LeftWallRayCast2" type="RayCast2D" parent="."]
position = Vector2( -8, 15 )
scale = Vector2( 0.5, 0.5 )
enabled = true
cast_to = Vector2( -4, 0 )

[node name="LeftWallRayCast1" type="RayCast2D" parent="."]
position = Vector2( -8, -8 )
scale = Vector2( 0.5, 0.5 )
enabled = true
cast_to = Vector2( -4, 0 )

[node name="RightWallRayCast2" type="RayCast2D" parent="."]
position = Vector2( 8, 15 )
scale = Vector2( 0.5, 0.5 )
enabled = true
cast_to = Vector2( 6, 0 )

[node name="RightWallRayCast1" type="RayCast2D" parent="."]
position = Vector2( 8, -8 )
scale = Vector2( 0.5, 0.5 )
enabled = true
cast_to = Vector2( 6, 0 )

[node name="GroundRaycast" type="Node2D" parent="."]

[node name="GroundRaycast3" type="RayCast2D" parent="GroundRaycast"]
position = Vector2( 7.5, 10 )
scale = Vector2( 0.5, 0.5 )
enabled = true
cast_to = Vector2( 0, 17 )
collision_mask = 5

[node name="GroundRaycast2" type="RayCast2D" parent="GroundRaycast"]
position = Vector2( 0, 10 )
scale = Vector2( 0.5, 0.5 )
enabled = true
cast_to = Vector2( 0, 17 )
collision_mask = 5

[node name="GroundRaycast1" type="RayCast2D" parent="GroundRaycast"]
position = Vector2( -7.5, 10 )
scale = Vector2( 0.5, 0.5 )
enabled = true
cast_to = Vector2( 0, 17 )
collision_mask = 5
[connection signal="timeout" from="JusttakedamageTimer" to="." method="_on_JusttakedamageTimer_timeout"]
